3.6.8 - ???

* 11557: Auto-select contents of Edit boxes when they get focus
* 11545: Description of Prototype will auto-include any BasicName
* 11546: Default dialog-closing button behaviors for Enter/Esc
         Key shortcuts added to Piece Definer (see Game Piece help)
         Piece Definer list boxes jump to entry starting with that letter
         Key shortcuts added editing Layer trait (see Layer help)
         Most text fields support Ctrl/Cmd+Z for undo/redo
* 11544: Broken links to and within Reference Manual
* 11543: Closing game should reset multiplayer flag for console
* 11540: Display translated Basic Piece/Basic Name in Scrollable lists in Game
    Piece Palette
* 11537: Cancel key in Multi-Piece Editor (Edit all contained pieces)
    correctly backs out with no changes
* 11534: Add Open all Contained Pieces option
* 11524: Option to 'always use format' on text label (even if label is blank)
* 11521: BoundsTracker - Track bounds and repaint just for the regions of
    added pieces; rather than the whole map
* 11515: Piece dropped into incorrect position in the stack when dragging
    within a stack to a lower position
* 11513: Piece "disappears" when dragged to grid space with an existing stack
    and "snap to defined point"
* 11510: Updated Opt-in version of the 'Leading Zeros in Integers' handing
* 11497: Don't play sounds while fast-forwarding a log
* 11496: Safer GKC Configurer for Fixed # From Deck

3.6.7 - 3 June 2022

* 11487: Removed obsolete option from startup script
* 11465: DoActionButton claims its icon in remove-unused-images
* 11460: Show a dialog when connection to the game server is lost
* 11446: Tweak version number display in online window (numbers at end, grayed
    out)
* 11417: Fix Ctrl key with Does Not Stack trait
* 11414: Improved version mismatch messaging
* 11406: Don't show image scale option for panels inside Chart Windows
* 11388: Correctly draw hex coordinates for odd-numbered columns spanning tile
    boundaries