@@ -22,6 +22,7 @@
       "new_features": [
       ],
       "bug_fixes": [
+        { "num": 11565, "desc": "Global Option List Preferences not initialising Global Property correctly" },
         { "num": 11544, "desc": "Broken links to and within Reference Manual" },
         { "num": 11543, "desc": "Closing game should reset multiplayer flag for console" },
         { "num": 11540, "desc": "Display translated Basic Piece/Basic Name in Scrollable lists in Game Piece Palette" },
@@ -32,8 +33,10 @@
         { "num": 11496, "desc": "Safer GKC Configurer for Fixed # From Deck" }
       ],
       "other_improvements": [
+        { "num": 11570, "desc": "Update Module Extension window, add missing description" },
+        { "num": 11564, "desc": "Prevent Notes windows always starting open at very last character of note" },
         { "num": 11557, "desc": "Auto-select contents of Edit boxes when they get focus" },
-        { "num": 11546, "desc": "Default dialog-closing button behaviors for Enter/Esc" },
+        { "num": 11546, "desc": "Default dialog-closing button behaviors for Enter/Esc; Key shortcuts added to Piece Definer (see Game Piece help); Piece Definer list boxes jump to entry starting with that letter; Key shortcuts added editing Layer trait (see Layer help); Most text fields support Ctrl/Cmd+Z for undo/redo" },
         { "num": 11545, "desc": "Description of Prototype will auto-include any BasicName" },
         { "num": 11534, "desc": "Add Open all Contained Pieces option" },
         { "num": 11524, "desc": "Option to 'always use format' on text label (even if label is blank)" },
